# Ytranslate

./: .buildpacks  .gitignore  README.md  app.py  cookies.txt  pyproject.toml  requirements.txt  setup.sh
.streamlit/: config.toml
src/: __init__.py  deepl_translator.py  pdf.py  translator.py  tts.py  video.py  youtube.py
