[project]
name = "ytranslate"
version = "0.1.0"
description = "YouTube Video Translator and TTS"
requires-python = ">=3.14"
dependencies = [
    "streamlit>=1.5.0",
    "youtube-transcript-api>=0.6.0",
    "openai>=1.0.0",
    "pydub>=0.25.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
