[project]
name = "ytranslate"
version = "0.1.0"
description = "YouTube Video Translator and TTS"
requires-python = ">=3.14"
dependencies = [
    "streamlit>=1.53.1",
    "blinker>=1.7.0",
    "youtube-transcript-api==1.2.4",
    "openai>=2.16.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "gunicorn>=23.0.0",
    "yt-dlp>=2025.12.8",
    "pdfplumber>=0.10.0",
    "reportlab>=4.0.0",
    "deepl>=1.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
